Fix alignment for merchant profile approval message

--- a/app/assets/stylesheets/profile.css.scss
+++ b/app/assets/stylesheets/profile.css.scss
@@ -93,3 +93,8 @@
     }
   }
 }
+
+//Fix alignment for Merchatn profile "Pending", and "Claim this Page"
+.merchant-profile-approval {
+  margin-left: 30px;
+}
